--- a/src/components/mainLayout/navbar/navbar.css
+++ b/src/components/mainLayout/navbar/navbar.css
@@ -7,6 +7,12 @@
   padding: 1.5rem 2rem;
 }
 
+@media (max-width: 768px) {
+  .navbar {
+    padding: 1rem;
+  }
+}
+
 /* Navbar Left */
 .navbar .navbar_left {
   display: flex;
@@ -239,4 +245,17 @@
 
 .dropdown_item:hover {
   background: var(--surface);
+}
+
+@media (max-width: 768px) {
+  .navbar .navbar_right .search {
+    display: none;
+  }
+
+  .navbar .navbar_right .icons {
+    font-size: 1.2rem;
+    gap: 0.5rem;
+    display: flex;
+    align-items: center;
+  }
 }
